# jellyfin-sdk-rust

./: Cargo.toml  ENDPOINTS.md  README.md
src/: jellyfin_response.rs  jellyfin_sdk.rs  jellyfin_sdk_error.rs  lib.rs
src/api/: activity_log.rs  api_keys.rs  jellyfin_api.rs  mod.rs  system.rs  url_builder.rs
src/api/endpoints/: mod.rs  system.rs
src/api/models/: base_response.rs  keys.rs  logs.rs  mod.rs  system.rs
src/client_infos/: informations.rs  mod.rs
src/discovery/: jellyfin_discovery.rs  mod.rs
src/websocket/: jellyfin_websocket.rs  mod.rs
